# Brecho_E-commerce

./: .flake8  .gitignore  API_PRODUTOS.md  GUIA_DESENVOLVIMENTO.md  README.md  STATUS_IMPLEMENTACAO.md  alembic.ini  pyproject.toml  test_auth.py  test_jwt_simple.py
alembic/versions/: 80e6ee7ed535_initial_migration.py
app/: __init__.py  config.py  main.py
app/models/: __init__.py  base.py  categoria.py  endereco.py  item_pedido.py  pedido.py  produto.py  usuario.py
app/routes/: admin.py  auth.py  auth_new.py  carrinho.py  produtos.py  usuarios.py
app/services/: produto_service.py
app/templates/: admin_painel.html  base.html  carrinho.html  index.html  login.html  shop.html
scripts/: populate_data.py
